@@ -1,0 +1,3 @@
+<script>
+  alert(String.fromCharCode(0xd800));
+</script>
